adding new images

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <p>Walking hand in hand, sharing flowers, stealing glances — these are the moments that make our love story so beautiful. Your smile is my favorite blessing, and holding your hand is my greatest joy. 🌹</p>
                     <img src="images/photo9.jpeg" alt="Walking hand in hand" class="timeline-img">
                 </div>
+                
             </div>
             <div class="timeline-item left animate-on-scroll">
                 <div class="timeline-content">
@@ -225,6 +226,13 @@
                     <i class="fas fa-heart"></i>
                     <p>Precious Love 💐</p>
                 </div>
+                 <div class="gallery-item animate-on-scroll" data-caption="Precious moments, precious love 💐">
+                <img src="images/photo11.jpeg" alt="Precious moment">
+                <div class="gallery-overlay">
+                    <i class="fas fa-heart"></i>
+                    <p>Precious Love 💐</p>
+                </div>
+                
             </div>
         </div>
     </section>
